[project]
name = "telemt-bot"
version = "0.1.0"
description = "Telegram-бот для управления Telemt MTProxy через Control API v1."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.27.0",
    "aiohttp==3.13.5",
    "aiosqlite==0.22.1",
    "apscheduler==3.11.2",
    "openpyxl==3.1.5",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "python-dotenv==1.2.2",
    "qrcode[pil]==8.2",
    "ruff>=0.15.12",
]

[tool.ty.environment]
python = ".venv/bin/python"

[tool.ruff]
exclude = [".venv"]
unsafe-fixes = true
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.rules]
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-type-arguments = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
